--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,4 @@ BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
+BMS.DataBaseData/ServerConfiguration.cs
