--- a/BmsWpf.Services/BmsWpf.Services.csproj
+++ b/BmsWpf.Services/BmsWpf.Services.csproj
@@ -20,4 +20,10 @@
     <ProjectReference Include="..\BMS.DataBaseModels\BMS.DataBaseModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="PresentationFramework">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.6.1\PresentationFramework.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
