--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
+BMS.DataBaseData/ServerConfiguration.cs
