--- a/BmsWpf/BmsWpf.csproj
+++ b/BmsWpf/BmsWpf.csproj
@@ -210,8 +210,8 @@
       <DependentUpon>OfferForm.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
-    <Compile Include="Views\Forms\PaymentClientForm.xaml.cs">
-      <DependentUpon>PaymentClientForm.xaml</DependentUpon>
+    <Compile Include="Views\Forms\PaymentForm.xaml.cs">
+      <DependentUpon>PaymentForm.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Forms\PaymentSupplierForm.xaml.cs">
       <DependentUpon>PaymentSupplierForm.xaml</DependentUpon>
@@ -312,7 +312,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\Forms\PaymentClientForm.xaml">
+    <Page Include="Views\Forms\PaymentForm.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
