--- a/.gitignore
+++ b/.gitignore
@@ -216,3 +216,4 @@ BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
 BMS.DataBaseData/ServerConfiguration.cs
+BMS.DataBaseData/ServerConfiguration.cs
